personalized starter code

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*!
 Theme Name: henock fantahun
 Theme URI: http://underscores.me/
-Author: Underscores.me
+Author: henock fantahun
 Author URI: http://underscores.me/
-Description: Description
+Description: theme for rad class
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
