--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*!
 Theme Name: henock fantahun
-Theme URI: http://underscores.me/
+Theme URI: 
 Author: henock fantahun
-Author URI: http://underscores.me/
+Author URI: http://henock.com/
 Description: theme for rad class
 Version: 1.0.0
 License: GNU General Public License v2 or later
